# claros

./: .gitignore  README.md  ecosystem.config.cjs
agent/: .env.example  feed-operator2.json  operator-feeds.json  package-lock.json  package.json  proof.json
agent/src/: agent-cycle.ts  attest-eia-once.ts  attest-once.ts  casper-read.ts  cycle.ts  delegate-once.ts  eia-crawl.ts  eia-feeds.ts  eia-list.ts  eia.ts  keygen.ts  loop.ts  migrate-feeds.ts  populate-feeds.ts  register-eia-feed.ts  register-feed.ts  reinvest-once.ts  set-root.ts  signer.ts  stake-once.ts  tools.ts  verify-eligibility-once.ts
contracts/: .env.example  CHANGELOG.md  Cargo.toml  Odra.toml
contracts/.cargo/: config.toml
contracts/resources/: casper-test-contracts.toml
contracts/src/: attestation_registry.rs  eligibility_gate.rs  feed_registry.rs  gate_stub.rs  known_good_proof.rs  lib.rs  treasury_vault.rs  verifier.rs  vk.rs
contracts/wasm/: AttestationRegistry.wasm  EligibilityGate.wasm  FeedRegistry.wasm  TreasuryVault.wasm
scripts/: verify-onchain.mjs
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: index.ts
services/claros-api/: .env.example  index.ts  package-lock.json  package.json  tsconfig.json
services/consumer/: .env.example  index.ts  package-lock.json  package.json  wrap-cspr.ts
services/facilitator/: .env.example  config.ts  index.ts  package-lock.json  package.json
shared/: deployments.json
web/: mdx-components.js  next.config.mjs  package-lock.json  package.json  postcss-conditional-tailwind.mjs  postcss.config.mjs
(+107 files in other folders)
