[package]
edition = "2021"
name = "contracts"
version = "0.1.0"

[dependencies]
odra = { version = "2.8.0", features = [], default-features = false }

[dev-dependencies]
odra-test = { version = "2.8.0", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.8.0", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.8.0", features = [], default-features = false }
odra-cli = { version = "2.8.0", features = [], default-features = false }
env_logger = "0.11"

[[bin]]
name = "contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "contracts_cli"
path = "bin/cli.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3

# odra 2.8.1 hardcodes gas_price_tolerance=5; testnet max_gas_price=1 rejects it
# ("invalid pricing mode"). Vendored copy patches it to 1.
[patch.crates-io]
odra-casper-rpc-client = { path = "../vendor/odra-casper-rpc-client" }
